working openapi client api generator + login form is broken

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,32 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+src/openapi/.gitignore
+src/openapi/.openapi-generator-ignore
+src/openapi/api.module.ts
+src/openapi/configuration.ts
+src/openapi/encoder.ts
+src/openapi/git_push.sh
+src/openapi/index.ts
+src/openapi/param.ts
+src/openapi/README.md
+src/openapi/variables.ts
+src/openapi/.openapi-generator/FILES
+src/openapi/.openapi-generator/VERSION
+src/openapi/api/api.ts
+src/openapi/api/authentication-resource.service.ts
+src/openapi/api/authentication-resource.serviceInterface.ts
+src/openapi/api/slab-resource.service.ts
+src/openapi/api/slab-resource.serviceInterface.ts
+src/openapi/api/test-resource.service.ts
+src/openapi/api/test-resource.serviceInterface.ts
+src/openapi/api/user-resource.service.ts
+src/openapi/api/user-resource.serviceInterface.ts
+src/openapi/model/authentication-request-dto.ts
+src/openapi/model/models.ts
+src/openapi/model/slab-dto.ts
+src/openapi/model/token-refresh-request-dto.ts
+src/openapi/model/token-validation-request-dto.ts
+src/openapi/model/user-creation-request-dto.ts
+src/openapi/model/user-info-update-request-dto.ts
+src/openapi/model/user-password-update-request-dto.ts
